[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "tests"
publish = false
readme.workspace = true
repository = "https://github.com/RibirX/Ribir/tests"
version.workspace = true

[dev-dependencies]
paste.workspace = true
ribir = {path = "../ribir", features = ["material", "widgets"]}
ribir_dev_helper = {path = "../dev-helper"}
ribir_geom = {path = "../geom"}
trybuild.workspace = true
winit.workspace = true

[[test]]
name = "compile_message"
path = "compile_message.rs"

[[test]]
name = "rdl_macro_test"
path = "rdl_macro_test.rs"

[[test]]
name = "child_template_derive"
path = "child_template_derive_test.rs"

[[test]]
name = "declare_builder"
path = "declare_builder_test.rs"

[[test]]
name = "path_child"
path = "path_child_test.rs"
