[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir_text"
readme.workspace = true
repository = "https://github.com/RibirX/Ribir/text"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more.workspace = true
fontdb.workspace = true
log.workspace = true
ordered-float.workspace = true
ribir_algo = {path = "../algo", version = "0.3.0" }
ribir_geom = {path = "../geom", version = "0.3.0" }
ribir_painter = {path = "../painter", version = "0.3.0" }
rustybuzz.workspace = true
unicode-bidi.workspace = true
unicode-script.workspace = true
unicode-segmentation.workspace = true
quick-xml.workspace = true
ahash.workspace = true


[features]
default = ["raster_png_font"]
raster_png_font = ["ribir_painter/png"]
