[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir_text"
readme.workspace = true
repository = "https://github.com/RibirX/Ribir/text"
version.workspace = true

[dependencies]
ahash.workspace = true
bitflags.workspace = true
derive_more = { workspace = true, features = ["add", "add_assign", "mul", "not"] }
font-types.workspace = true
parley.workspace = true
quick-xml.workspace = true
read-fonts.workspace = true
ribir_algo = { workspace = true }
ribir_types = { workspace = true }
swash.workspace = true
tracing.workspace = true
unicode-segmentation.workspace = true
