[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir_types"
readme.workspace = true
repository = "https://github.com/RibirX/Ribir/types"
version.workspace = true

[dependencies]
euclid.workspace = true
material-colors.workspace = true
serde = { workspace = true, features = ["derive"] }
