[package]
authors = ["Adoo <Adoo@outlook.com>"]
edition = "2018"
name = "widget_derive"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = "1.0.69"

[dev-dependencies]
ribir = {path = "../core"}
trybuild = "1.0"
