[package]
authors = ["Adoo <Adoo@outlook.com>"]
edition = "2021"
name = "widget_derive"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
proc-macro2 = "1.0.26"
quote = "1.0.9"

[dev-dependencies]
ribir = {path = "../core"}
trybuild = "1.0.53"
winit = "0.26.1"

[build-dependencies]
proc-macro2 = "1.0.26"
syn = "1.0.83"

[dependencies.syn]
features = ["visit-mut", "full", "extra-traits"]
version = "1.0.83"
