[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir_widgets"
readme.workspace = true
repository = "https://github.com/RibirX/Ribir/widgets"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyon_algorithms = "1.0.1"
lyon_path = "1.0.1"
ribir_core = {path = "../core", version = "0.0.0"}
