[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir_widgets"
readme.workspace = true
repository = "https://github.com/RibirX/Ribir/widgets"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyon_algorithms.workspace = true
lyon_path.workspace = true
ribir_core = {path = "../core", version = "0.4.0-alpha.28" }
ribir_geom = {path = "../geom", version = "0.4.0-alpha.28" }
webbrowser.workspace = true
unicode-segmentation.workspace = true

[dev-dependencies]
paste.workspace = true
winit.workspace = true
ribir_dev_helper = {path = "../dev-helper"}
ribir_material = {path = "../themes/material"}
ribir_slim = {path = "../themes/ribir_slim"}
ribir = { path = "../ribir", features = ["material"] }
