[package]
name = "ribir_winit"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
ribir_core = { path = "../core" }
ribir_geometry = { path = "../geometry" }
ribir_gpu = {path = "../gpu"}
ribir_text = {path = "../text"}
winit = "0.28.1"

[features]
default = ["wgpu_gl"]
wgpu_gl = ["ribir_gpu/wgpu_gl"]
