[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "counter"
publish = false
version.workspace = true

[dependencies]
paste.workspace = true
# we disable `default-features`, because we want more control over testing.
ribir = {path = "../../ribir", features = ["material", "widgets"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.92"

[dev-dependencies]
ribir_slim = { path = "../../themes/ribir_slim" }
ribir_dev_helper = {path = "../../dev-helper"}
ribir_core = { path = "../../core", features = ["test-utils"]}

[features]
wgpu = ["ribir/wgpu"]


[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[bundle]
"productName" = "Counter"
"version" = "1.0.0"
"identifier" = "com.ribir.counter"
"shortDescription" = ""
"longDescription" = ""
"copyright" = "Copyright (c) You 2021. All rights reserved."
"icon" = ["../Logo.ico"]
"resources" = []  
"externalBin" = []
