[package]
name = "gallery"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ribir = { path = "../../ribir", features = ["material", "widgets"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.92"

[dev-dependencies]
ribir_dev_helper = { path = "../../dev-helper" }

[features]
wgpu = ["ribir/wgpu"]

[[bin]]
name = "gallery"
path = "src/main.rs"
