[package]
name = "gallery"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ribir = { path = "../../ribir", features = ["material", "widgets"] }

[dev-dependencies]
ribir_core = { path = "../../core", features = ["test-utils"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.92"

[features]
wgpu = ["ribir/wgpu"]
debug = ["ribir/debug"]

[[bin]]
name = "gallery"
path = "src/main.rs"

[package.metadata.bundle]
product-name = "Gallery"
identifier = "com.ribir.gallery"
icon = ["../../examples/Logo.ico"]
targets = "all"
