[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "messages"
publish = false
version.workspace = true

[dependencies]
paste.workspace = true
# we disable `default-features`, because we want more control over testing.
ribir = {path = "../../ribir", features = ["material", "widgets"]}
ribir_slim = { path = "../../themes/ribir_slim" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.92"

[dev-dependencies]
ribir_dev_helper = {path = "../../dev-helper"}

[features]
wgpu = ["ribir/wgpu"]


[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
