[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "todos"
publish = false
version.workspace = true

[dependencies]
paste.workspace = true
# we disable `default-features`, because we want more control over testing.
ribir = {path = "../../ribir", features = ["material", "widgets"]}
ribir_dev_helper = {path = "../../dev-helper"}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}

[features]
wgpu = ["ribir/wgpu"]
