[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "todos"
publish = false
version.workspace = true

[dependencies]
# we disable `default-features`, because we want more control over testing.
ribir = {path = "../../ribir", features = ["material", "widgets"]}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen.workspace = true


[dev-dependencies]

[features]
wgpu = ["ribir/wgpu"]
debug = ["ribir/debug"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
