
[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "wordle_game"
publish = false
version.workspace = true

[dependencies]
paste.workspace = true
ribir = {path = "../../ribir", features = ["material", "widgets"]}
csv = "1.3.0"
rand = "0.8.5"
getrandom = { workspace = true }

[dev-dependencies]
ribir_dev_helper = {path = "../../dev-helper"}

[features]
wgpu = ["ribir/wgpu"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

