[package]
categories = ["gui"]
description = "Ribir is a framework for building modern native/wasm cross-platform user interface applications."
documentation = "https://ribir.org/docs"
edition = "2021"
homepage = "https://ribir.org"
keywords = ["gui", "ui", "declarative", "compose-ui"]
license = "MIT"
name = "ribir_builtin"
readme = "README.md"
repository = "https://github.com/RibirX/Ribir/algo"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.37"
quote = "1.0.18"
smallvec = "1.8.0"

[dependencies.syn]
features = ["full"]
version = "2.0.2"
