[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "ribir_builtin"
readme.workspace = true
repository = "https://github.com/RibirX/Ribir/algo/macros/builtin"
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.37"
quote = "1.0.18"
smallvec = "1.8.0"

[dependencies.syn]
features = ["full"]
version = "1.0.109"
